--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <title></title>
 </head>
 <body>
-<h1>Hello from Binar</h1>
-<h2>Binar Demo CI/CD</h2>
+<h1>Hello from Roboticpuppies</h1>
 </body>
 </html>
